<resources>
    <string name="app_name">Test Personaje de series</string>
    <string name="setName">Nombre:</string>
    <string name="setApel">Apellido:</string>
    <string name="start">Empezar Test</string>
    <string name="choose">Elige la serie:</string>
    <string name="start_test">Empezar test</string>
    <string name="title_activity_question">Responde a las siguientes preguntas</string>
    <string name="action_settings">Settings</string>
    <string name="scroll">Vista desplazable</string>
    <string name="hello">Hola</string>
    <string-array name="series">
        <item>Star Wars</item>
        <item>Ricardo El Abuelo Molon y su Nieto Mortadelo</item>
    </string-array>
    <string name="text_resultado">Eres </string>
    <string name="text_btnAbrirWiki">Abrir en wiki</string>
    <string name="text_btnCompartir">Compartir</string>
    <string name="text_chooserMessage">Seleccione la aplicacion con la que desea abrir</string>
    <string name="text_btnFinish">Ver Resultado</string>
    <string name="error_text">Error debes de añadir su nombre y apellidos</string>
</resources>