<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reto1pmd.ResultadoActivity">

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:layout_marginBottom="62dp"
        android:text="@string/text_resultado"
        app:layout_constraintBottom_toTopOf="@+id/imgPersonaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPersonaje"
        android:layout_width="185dp"
        android:layout_height="166dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado"
        app:srcCompat="?attr/selectableItemBackground" />

    <Button
        android:id="@+id/btnWiki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="504dp"
        android:text="@string/text_btnAbrirWiki"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCompartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="10dp"
        android:text="@string/text_btnCompartir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnWiki"
        app:layout_constraintTop_toBottomOf="@+id/btnWiki"
        app:layout_constraintVertical_bias="0.0" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="301dp"
        android:layout_height="131dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toTopOf="@+id/btnWiki"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>